# DTE-2600

1-4Console/: CMakeLists.txt  basic_math.cpp  main.cpp
2DShapes/: CMakeLists.txt  base.h  main.cpp  shapes.cpp  shapes.h
Calculator/: calculator.cpp  calculator.h  calculator.ui  main.cpp
Classroom/: CMakeLists.txt  main.cpp  person.cpp  person.h  temp_struct_vector.cpp  temp_struct_vector.h  temp_task.cpp  temp_task.h  vehicle.cpp  vehicle.h
KlasseromTest/: CMakeLists.txt  class_test.h  main.cpp  test_fredag12.cpp  test_fredag12.h  types.cpp  types_kodeeksempel.cpp  types_kodeeksempel.h
Oblig3_RE/: CMakeLists.txt  classes.cpp  classes.h  fileOps.h  main.cpp
Oblig_1_calc/: CMakeLists.txt  main.cpp  mathops.cpp  mathops.h
RoomDimensions/: CMakeLists.txt  building.cpp  building.h  fileops.cpp  fileops.h  main.cpp  room.cpp  room.h
Rooms_v2/: CMakeLists.txt  building.cpp  building.h  fileops.cpp  fileops.h  main.cpp  room.h
Virtuell_class/: CMakeLists.txt  main.cpp  person.cpp  person.h  student.cpp  student.h
build-1-4Console-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-1-4Console-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-2DShapes-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-2DShapes-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-Calculator-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Calculator-Desktop-Debug/.qt/: QtDeploySupport.cmake
build-Calculator-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-Calculator-Desktop-Debug/Calculator_autogen/: deps
build-Calculator-Desktop-RelWithDebInfo/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Calculator-Desktop-RelWithDebInfo/.qt/: QtDeploySupport.cmake
build-Calculator-Desktop-RelWithDebInfo/.qtc_clangd/: compile_commands.json
build-Calculator-Desktop-RelWithDebInfo/Calculator_autogen/: deps
build-Calculator-Desktop-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Calculator-Desktop-Release/.qt/: QtDeploySupport.cmake
build-Calculator-Desktop-Release/.qtc_clangd/: compile_commands.json
build-Calculator-Desktop-Release/Calculator_autogen/: deps
build-Classroom-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-KlasseromTest-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Oblig3_RE-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  A.txt  B.txt  C.txt  CMakeCache.txt  D.txt  Input.txt  build.ninja  cmake_install.cmake
build-Oblig_1_calc-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-RoomDimensions-Desktop-Debug/: .ninja_deps  .ninja_log  C.txt  CMakeCache.txt.prev  Input_rom-1.txt  build.ninja  cmake_install.cmake  path.txt
build-Rooms_v2-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  A.txt  B.txt  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Virtuell_class-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
(+267 files in other folders)
